Added missing '\n', which causes parsing error at     http://xfce.org/~kelnos/xfce4/i18n/
Added fall back address at the 'Language-Team: ', according to the
    http://www.iro.umontreal.ca/translation/registry.cgi?team=index

Modified initial comment strings with template by 'msginit'.

Discarded obsolete translations.


(Old svn revision: 17047)

--- a/po/ar.po
+++ b/po/ar.po
@@ -1,15 +1,16 @@
-# Arabic translation for xfce4-panel
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Arabic translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # saleh alhathal <hathalsal@hotmail.com>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: ar\n"
+"Project-Id-Version: xfce4-panel 4.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2004-2-8 8:25+0300\n"
+"PO-Revision-Date: 2005-08-21 17:26+0900\n"
 "Last-Translator: saleh alhathal <hathalsal@hotmail.com>\n"
-"Language-Team: arabic\n"
+"Language-Team: Arabic <lumina@silverpen.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -72,9 +73,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, نسخة %s\n"
+"\n"
+"The Xfce Panel\n"
+"نسخة %s\n"
+"\n"
 "جزء من الواجهة الرسومية Xfce\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
@@ -829,133 +836,3 @@ msgstr ""
 #, fuzzy
 msgid "Printer Management"
 msgstr "متصفح الملفات"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "حذف هذة المادة سيؤدي لحذف قائمتها المنسدلة أيضا"
-
-#~ msgid "Caption:"
-#~ msgstr "تعليق :"
-
-#~ msgid "Tooltip:"
-#~ msgstr "تلميح للأداة :"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "الصاق قائمة بالبرنامج"
-
-#~ msgid "Change menu item"
-#~ msgstr "غير قائمة المواد"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "إضغط على الزر 3 في الفأرة لتغير المادة"
-
-#~ msgid "Add launcher"
-#~ msgstr "أضف برنامج"
-
-#~ msgid "Add new item"
-#~ msgstr "أضف مادة جديدة"
-
-#~ msgid "Left"
-#~ msgstr "يسار"
-
-#~ msgid "Right"
-#~ msgstr "يمين"
-
-#~ msgid "Top"
-#~ msgstr "إعلى"
-
-#~ msgid "Bottom"
-#~ msgstr "إسفل"
-
-#~ msgid "Popup position:"
-#~ msgstr "موقع التشغيل :"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "الصاق قائمة بالبرنامج"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "مكان التذكير"
-
-#~ msgid "Menu"
-#~ msgstr "قائمة"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "إضهار صينية النظام في شريط المهام"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "لم أتمكن الحصول على سمة أولية"
-
-#~ msgid "This should not happen"
-#~ msgstr "ﻻ يفترض حدوث هذا"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "لم أتمكن من الحصول على هوامش سطح المكتب"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "لم أتمكن التواصل مع مدير الجلسة"
-
-#~ msgid "Remove"
-#~ msgstr "حذف"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "إضهار زرين"
-
-#~ msgid "Change item"
-#~ msgstr "غير المادة"
-
-#~ msgid "Menu:"
-#~ msgstr "قائمة :"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/شريط Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/أضف _جديد"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_خصائص..."
-
-#~ msgid ""
-#~ "Removing an item will also remove its popup menu.\n"
-#~ "\n"
-#~ "Do you want to remove the item?"
-#~ msgstr ""
-#~ "حذف هذة المادة سيؤدي لحذف قائمتة المنسدلة أيضا\n"
-#~ "\n"
-#~ "هل تريد حذف هذة المادة؟"
-
-#~ msgid "Select icon"
-#~ msgstr "إختر أيقونة"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "يبدوان واجهتك الرسومية ﻻ تدعم التلميحات كماتم تعريفها في http://www."
-#~ "freedesktop.org. \n"
-#~ "بعض خصائص Xfce قد ﻻ تعمل كما يجب"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_مدير اﻹعدادات"
-
-#~ msgid "Tiny"
-#~ msgstr "صغير جدا"
-
-#~ msgid "Icon theme:"
-#~ msgstr "سمة اﻷيقونات :"
-
-#~ msgid "Panel layer:"
-#~ msgstr "مظهر الشريط :"
-
-#~ msgid "Normal"
-#~ msgstr "عادية"
-
-#~ msgid "Center the panel:"
-#~ msgstr "وسط الشريط :"
-
-#~ msgid "Set"
-#~ msgstr "تثبيت"
