--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2005-08-18 01:05+0900\n"
+"PO-Revision-Date: 2005-08-21 17:27+0900\n"
 "Last-Translator: Miroslav Yordanov <miordanov@i-space.org>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -73,9 +73,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s,·версия·%s\n"
+"\n"
+"The Xfce Panel\n"
+"·версия·%s\n"
+"\n"
 "Част от·Xfce·Desktop·Environment\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
@@ -831,179 +837,3 @@ msgstr ""
 #, fuzzy
 msgid "Printer Management"
 msgstr "Управление на файловете"
-
-#, fuzzy
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr ""
-#~ "Премахването на обекта·също ще премахне неговото изкачащо меню.\n"
-#~ "\n"
-#~ "Искате ли да премахнете обекта?"
-
-#~ msgid "Caption:"
-#~ msgstr "Заглавие:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Подсказка"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Прикрепва меню към обекта"
-
-#~ msgid "Change menu item"
-#~ msgstr "Промяна на обект от менюто"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Натискане бутон 3 на мишката за промяна на обекта"
-
-#~ msgid "Add launcher"
-#~ msgstr "Добавяне на обект"
-
-#~ msgid "Add new item"
-#~ msgstr "Добавяне на нов обект"
-
-#~ msgid "Left"
-#~ msgstr "Ляво"
-
-#~ msgid "Right"
-#~ msgstr "Дясно"
-
-#~ msgid "Top"
-#~ msgstr "Горе"
-
-#~ msgid "Bottom"
-#~ msgstr "Долу"
-
-#~ msgid "Popup position:"
-#~ msgstr "Позиция на изкачащото меню:"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "Прикрепва меню към обекта"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Област за известяване"
-
-#~ msgid "Menu"
-#~ msgstr "Меню"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Показва панел с икони в панела с задачите"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Не мога да взема първоначалния стил"
-
-#~ msgid "This should not happen"
-#~ msgstr "Това не трябва да се случва"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Не мога да взема границите на десктопа"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Не мога да се свържа с мениджъра на сесии"
-
-#~ msgid "Remove"
-#~ msgstr "Премахване"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Показва два бутона:"
-
-#~ msgid "Change item"
-#~ msgstr "Промяна на обекта"
-
-#~ msgid "Menu:"
-#~ msgstr "Меню:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce панел"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Добавяне на нов обект"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Настройки"
-
-#~ msgid "Select icon"
-#~ msgstr "Избор на икона"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Вашият мениджър на прозорци изглежда не подържа загатваниядефинирани на "
-#~ "http://www.freedesktop.org.·\n"
-#~ "Някои възможности на Xfce няма да работят както се очаква."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Мениджър за настройки"
-
-#~ msgid "Tiny"
-#~ msgstr "Тънък"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Тема за икони:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Слой на панела:"
-
-#~ msgid "Normal"
-#~ msgstr "Нормално"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Центриране на панела"
-
-#~ msgid "Set"
-#~ msgstr "Настрой"
-
-#~ msgid "Sunday"
-#~ msgstr "Неделя"
-
-#~ msgid "Monday"
-#~ msgstr "Понеделник"
-
-#~ msgid "Tuesday"
-#~ msgstr "Вторник"
-
-#~ msgid "Wednesday"
-#~ msgstr "Сряда"
-
-#~ msgid "Thursday"
-#~ msgstr "Четвъртък"
-
-#~ msgid "Friday"
-#~ msgstr "Петък"
-
-#~ msgid "February"
-#~ msgstr "Февруари"
-
-#~ msgid "March"
-#~ msgstr "Март"
-
-#~ msgid "April"
-#~ msgstr "Април"
-
-#~ msgid "May"
-#~ msgstr "Май"
-
-#~ msgid "June"
-#~ msgstr "Юни"
-
-#~ msgid "July"
-#~ msgstr "Юли"
-
-#~ msgid "August"
-#~ msgstr "Август"
-
-#~ msgid "September"
-#~ msgstr "Септември"
-
-#~ msgid "October"
-#~ msgstr "Октомври"
-
-#~ msgid "November"
-#~ msgstr "Ноември"
-
-#~ msgid "December"
-#~ msgstr "Декември"
