--- a/po/ca.po
+++ b/po/ca.po
@@ -1,16 +1,16 @@
 # xfce4-panel for XFce desktop environment.
-# Copyright (C) 2003, 2004 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the xfce4 package.
-# Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003, 2004.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
+# Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: XFce 4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2004-03-29 21:17+0100\n"
+"PO-Revision-Date: 2005-08-21 17:41+0900\n"
 "Last-Translator: Carles Munoz Gorriz <carlesmu@internautas.org>\n"
-"Language-Team: ca <ca@li.org>\n"
+"Language-Team: Catalan <ca@dodds.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -73,9 +73,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versió %s\n"
+"\n"
+"The Xfce Panel\n"
+"versió %s\n"
+"\n"
 "Part del Entorn d'Escriptori XFce\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
