--- a/po/hi.po
+++ b/po/hi.po
@@ -1,19 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Hindi translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # G Karunakar <karunakar@freedomink.org>, 2003.
 #
 msgid ""
 msgstr ""
+"Project-Id-Version: xfce4-panel 4.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2003-05-21 12:50+0530\n"
+"PO-Revision-Date: 2005-08-21 17:43+0900\n"
 "Last-Translator: G Karunakar <karunakar@freedomink.org>\n"
 "Language-Team: Hindi <indlinux-hindi-gnome@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version  Xfce 4\n"
 
 # libgnomeui/gnome-file-entry.c:418
 #: ../panel/xfce_support.c:334
@@ -74,9 +74,16 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s सेसकरण %s\n"
+"\n"
+"The Xfce Panel\n"
+"\n"
+"सेसकरण %s\n"
+"\n"
 "Xfce डेसकटॉप वातावरण का भाग\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
