--- a/po/hu.po
+++ b/po/hu.po
@@ -1,18 +1,18 @@
 # translation of hu.po to Hungarian
-# Hungarian translations for xfce package.
-# Copyright (C) 2003 THE xfce'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the xfce package.
+# Hungarian translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Somogyi Peter <jerry@gnu>, 2003.
 # Egmont Koblinger <egmont@uhulinux.hu>, 2003
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: hu\n"
+"Project-Id-Version: xfce4-panel 4.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2003-07-16 16:20+0200\n"
+"PO-Revision-Date: 2005-08-21 17:53+0900\n"
 "Last-Translator: Egmont Koblinger <egmont@uhulinux.hu>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -77,9 +77,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, verzió %s\n"
+"\n"
+"The Xfce Panel\n"
+"verzió %s\n"
+"\n"
 "Az Xfce Munkakörnyezet része\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
@@ -835,180 +841,3 @@ msgstr ""
 #, fuzzy
 msgid "Printer Management"
 msgstr "Fájlkezelő"
-
-#, fuzzy
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr ""
-#~ "Egy elem eltávolítása a legördülő menüjét is eltávolítja.\n"
-#~ "\n"
-#~ "Biztosan törölni akarja ezt az elemet?"
-
-#~ msgid "Caption:"
-#~ msgstr "Címke:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Tipp:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Menü csatolása az indítóhoz"
-
-#~ msgid "Change menu item"
-#~ msgstr "Menüelem megváltoztatása"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Az elem megváltoztatásához kattintson a harmadik egérgombra"
-
-#~ msgid "Add launcher"
-#~ msgstr "Indító hozzáadása"
-
-#~ msgid "Add new item"
-#~ msgstr "Panelra helyezés"
-
-#~ msgid "Left"
-#~ msgstr "Balra"
-
-#~ msgid "Right"
-#~ msgstr "Jobbra"
-
-#~ msgid "Top"
-#~ msgstr "Felül"
-
-#~ msgid "Bottom"
-#~ msgstr "Alul"
-
-#~ msgid "Popup position:"
-#~ msgstr "Legördülő menü helye:"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "Menü csatolása az indítóhoz"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Értesítési terület"
-
-#~ msgid "Menu"
-#~ msgstr "Menü"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Panel megjelenítése a programlistában"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Nem elérhető az eredeti téma"
-
-#~ msgid "This should not happen"
-#~ msgstr "Ennek nem szabadna megtörténnie"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Nem elérhetőek a munkaasztalmargók"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Nem lehet a munkamenet-kezelőhöz csatlakozni"
-
-#~ msgid "Remove"
-#~ msgstr "Eltávolítás"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Két gomb megjelenítése:"
-
-#~ msgid "Change item"
-#~ msgstr "Elem megváltoztatása"
-
-#~ msgid "Menu:"
-#~ msgstr "Menü:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce panel"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/_Panelra helyezés"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Tulajdonságok..."
-
-#~ msgid "Select icon"
-#~ msgstr "Ikon kiválasztása"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Az ablakkezelő úgy tűnik, nem támogatja az új ablakkezelő tippeket, "
-#~ "ahogyan meghatározták a http://www.freedesktop.org-on.\n"
-#~ "Bizonyos Xfce szolgáltatások nem úgy működhetnek, ahogyan eredetileg "
-#~ "szánták."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Beállításkezelő"
-
-#~ msgid "Tiny"
-#~ msgstr "Apró"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Ikontéma:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Panel átlapolása:"
-
-#~ msgid "Normal"
-#~ msgstr "Normál"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Panel középre igazítása:"
-
-#~ msgid "Set"
-#~ msgstr "Beállítás"
-
-#~ msgid "Sunday"
-#~ msgstr "vasárnap"
-
-#~ msgid "Monday"
-#~ msgstr "hétfő"
-
-#~ msgid "Tuesday"
-#~ msgstr "kedd"
-
-#~ msgid "Wednesday"
-#~ msgstr "szerda"
-
-#~ msgid "Thursday"
-#~ msgstr "csütörtök"
-
-#~ msgid "Friday"
-#~ msgstr "péntek"
-
-#~ msgid "February"
-#~ msgstr "február"
-
-#~ msgid "March"
-#~ msgstr "március"
-
-#~ msgid "April"
-#~ msgstr "április"
-
-#~ msgid "May"
-#~ msgstr "május"
-
-#~ msgid "June"
-#~ msgstr "június"
-
-#~ msgid "July"
-#~ msgstr "július"
-
-#~ msgid "August"
-#~ msgstr "augusztus"
-
-#~ msgid "September"
-#~ msgstr "szeptember"
-
-#~ msgid "October"
-#~ msgstr "október"
-
-#~ msgid "November"
-#~ msgstr "november"
-
-#~ msgid "December"
-#~ msgstr "december"
