--- a/po/ms.po
+++ b/po/ms.po
@@ -1,14 +1,14 @@
 # Xfce4-panel Malay translation.
-# Copyright (C) 2003 Olivier Fourdan
-# This file is distributed under the same license as the xfce4 package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Harun Musa <mharun@gmx.net>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.0.3\n"
+"Project-Id-Version: xfce4-panel 4.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2004-02-07 10:31+0800\n"
+"PO-Revision-Date: 2005-08-21 17:47+0900\n"
 "Last-Translator: Harun Musa <mharun@gmx.net>\n"
 "Language-Team: Malay <translation-team-ms@list.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -73,9 +73,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versi %s\n"
+"\n"
+"The Xfce Panel\n"
+"versi %s\n"
+"\n"
 "Sebahagian Persekitaran Meja Xfce\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
@@ -830,134 +836,3 @@ msgstr ""
 #, fuzzy
 msgid "Printer Management"
 msgstr "Pengurusan fail"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Menyahkan item juga akan menyahkan menu popupnya."
-
-#~ msgid "Caption:"
-#~ msgstr "Caption:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Tooltip:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Tambah menu ke pelancar"
-
-#~ msgid "Change menu item"
-#~ msgstr "Tukar menu item"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Klik bebutang 3 tetikus untuk tukar item"
-
-#~ msgid "Add launcher"
-#~ msgstr "Tambah pelancar"
-
-#~ msgid "Add new item"
-#~ msgstr "Tambah item baru"
-
-#~ msgid "Left"
-#~ msgstr "Kiri"
-
-#~ msgid "Right"
-#~ msgstr "Kanan"
-
-#~ msgid "Top"
-#~ msgstr "Atas"
-
-#~ msgid "Bottom"
-#~ msgstr "Bawah"
-
-#~ msgid "Popup position:"
-#~ msgstr "Posisi popup:"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "Tambah menu ke pelancar"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Kawasan notifikasi"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Lihat tray sistem dalam taskbar"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Tak boleh dapat stail pemula"
-
-#~ msgid "This should not happen"
-#~ msgstr "Ini tidak sepatutnya berlaku"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Tak boleh dapat margin meja"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Tak boleh sambung ke pengurus sessi"
-
-#~ msgid "Remove"
-#~ msgstr "Buang"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Lihat dua bebutang:"
-
-#~ msgid "Change item"
-#~ msgstr "Tukar item"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Panel Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Tambah _item baru"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Perbendaharaan..."
-
-#~ msgid ""
-#~ "Removing an item will also remove its popup menu.\n"
-#~ "\n"
-#~ "Do you want to remove the item?"
-#~ msgstr ""
-#~ "Membuang item juga akan menyahkan menu popupnya.\n"
-#~ "\n"
-#~ "Adakah anda mahu buang item?"
-
-#~ msgid "Select icon"
-#~ msgstr "Pilih ikon"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Pengurus tetingkap anda nampaknya tidak menyokong petua pengurus "
-#~ "tetingkap baru sebagai yang didefinasikan di http://www.freedesktop."
-#~ "org. \n"
-#~ "Sebahagian ciri-ciri Xfce tidak bekerja seperti yang dikehendaki."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Pengurus _Tetapan"
-
-#~ msgid "Tiny"
-#~ msgstr "Cinonet"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema ikon:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Lapisan panel:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Ketengahkan panel:"
-
-#~ msgid "Set"
-#~ msgstr "Set"
