--- a/po/ta.po
+++ b/po/ta.po
@@ -1,15 +1,14 @@
 # Tamil translation of Tamil XFCE Panel.
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
-# 
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Tamil XFCE Panel 4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2003-09-24 17:41-0500\n"
+"PO-Revision-Date: 2005-08-21 17:49+0900\n"
 "Last-Translator: Dinesh Nadarajah <n_dinesh@yahoo.com>\n"
 "Language-Team: Tamil <tamilinix@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -74,9 +73,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, பதிப்பு %s\n"
+"\n"
+"The Xfce Panel\n"
+"பதிப்பு %s\n"
+"\n"
 "Xfce கணிமேசை சூழலை சேர்ந்தது\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:474
 #, c-format
@@ -836,182 +841,3 @@ msgstr ""
 #, fuzzy
 msgid "Printer Management"
 msgstr "கோப்பு மேலாண்மை"
-
-#, fuzzy
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr ""
-#~ "ஓர் உருப்படியைக் கழட்டினால் அதன் மேல்மீட்பு பட்டியும் கழட்டப்படும்.\n"
-#~ "\n"
-#~ "உருப்படியைக் கழட்ட விருப்பமா?"
-
-#~ msgid "Caption:"
-#~ msgstr "தலைப்பு வாக்கியம்"
-
-#~ msgid "Tooltip:"
-#~ msgstr "உதவிகருவி:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "ஓர் பட்டியை தொடங்கருடன் சேர்க்கவும்"
-
-#~ msgid "Change menu item"
-#~ msgstr "பட்டி உருப்படி மாற்றவும்"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "உருப்படி மாற்றுவதற்கு 3ஆம் சுட்டி பொத்தானை அமுத்தவும்"
-
-#~ msgid "Add launcher"
-#~ msgstr "தொடங்கர் சேர்க்கவும்"
-
-#~ msgid "Add new item"
-#~ msgstr "புதிய உருப்படி சேர்க்கவும்"
-
-#~ msgid "Left"
-#~ msgstr "இடது"
-
-#~ msgid "Right"
-#~ msgstr "வலது"
-
-#~ msgid "Top"
-#~ msgstr "மேல்"
-
-#~ msgid "Bottom"
-#~ msgstr "கீழ்"
-
-#~ msgid "Popup position:"
-#~ msgstr "பலகை இடம்:"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "ஓர் பட்டியை தொடங்கருடன் சேர்க்கவும்"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "அறிவிப்பு þடம்"
-
-#~ msgid "Menu"
-#~ msgstr "பட்டி"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "வேலைப்பட்டையில் அமைப்பு தட்டு காண்பிக்கவும்"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "தொடக்க பாணியை பெறமுடியவில்லை"
-
-#~ msgid "This should not happen"
-#~ msgstr "þது நடைபெறக்கூடாது"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "கணிமேசை எல்லைகளை பெறமுடியவில்லை"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "அமர்வு மேலாளருடன் இணைப்பு கொள்ள முடியவில்லை"
-
-#~ msgid "Remove"
-#~ msgstr "கழட்டுக"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "þரண்டு பொத்தான்களை காட்டுக:"
-
-#~ msgid "Change item"
-#~ msgstr "உருப்படி மாற்று"
-
-#~ msgid "Menu:"
-#~ msgstr "பட்டி"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/XFCE பலகை"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/புதிய _உருப்படி சேர்க்கவும்"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_பண்புகள்..."
-
-#~ msgid "Select icon"
-#~ msgstr "குறுப்படம் தெரிவு செய்"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "உங்கள் சாளரமேலாளர் http://www.freedesktop.org அறுதியிட்ட சாளர-குறிப்பிடுகளுக்கு "
-#~ "ஆதரவளிப்பு கிடையாது. \n"
-#~ "சில Xfce செயல்பாடுகள் விரும்பியதுபோல் வேலைசெய்யாது."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_அமைப்புகள் மேலாளர்"
-
-#~ msgid "Tiny"
-#~ msgstr "மிகசிறிய"
-
-#~ msgid "Icon theme:"
-#~ msgstr "குறும்படம் தோற்றம்:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "பலகை அடுக்கம்:"
-
-#~ msgid "Normal"
-#~ msgstr "இயல்பானது"
-
-#~ msgid "Center the panel:"
-#~ msgstr "பலகையை நடுப்படுத்து:"
-
-#~ msgid "Set"
-#~ msgstr "அமை"
-
-#~ msgid "Sunday"
-#~ msgstr "ஞாயிறு"
-
-#~ msgid "Monday"
-#~ msgstr "திங்கள்"
-
-#~ msgid "Tuesday"
-#~ msgstr "வெவ்வாய்"
-
-#~ msgid "Wednesday"
-#~ msgstr "புதன்"
-
-#~ msgid "Thursday"
-#~ msgstr "வியாழன்"
-
-#~ msgid "Friday"
-#~ msgstr "வெள்ளி"
-
-#~ msgid "February"
-#~ msgstr "பிப்ரவரி"
-
-#~ msgid "March"
-#~ msgstr "மார்ச்"
-
-#~ msgid "April"
-#~ msgstr "ஏப்ரல்"
-
-#~ msgid "May"
-#~ msgstr "மே"
-
-#~ msgid "June"
-#~ msgstr "ஜுன்"
-
-#~ msgid "July"
-#~ msgstr "ஜூலை"
-
-#~ msgid "August"
-#~ msgstr "ஆகஸ்ட்"
-
-#~ msgid "September"
-#~ msgstr "செப்டம்பர்"
-
-#~ msgid "October"
-#~ msgstr "அக்டோபர்"
-
-#~ msgid "November"
-#~ msgstr "நவம்பர்"
-
-#~ msgid "December"
-#~ msgstr "டிசம்பர்"
-
-#~ msgid "Type:"
-#~ msgstr "வகை:"
