--- a/po/ja.po
+++ b/po/ja.po
@@ -1,7 +1,7 @@
 # Japanese translations for xfce4-panel package.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Zhao Ji <zhao-ji@awz.ne.jp>, 2003-2004.
+# Zhao Ji <zhao-ji@awz.ne.jp>, 2003.
 # Daichi Kawahata <daichi@xfce.org>, 2005.
 #
 msgid ""
