--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -2,15 +2,15 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # umm <umm@pchome.com.tw>, 2003.
 # Ambrose Li <acli@ada.dhs.org>, 2004.
-# Hydonsingore Sie <hydonsingore@mail.educities.edu.tw>, 2005.
+# Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2005-06-27 22:40+0800\n"
-"Last-Translator: Hydonsingore Sie <hydonsingore@mail.educities.edu.tw>\n"
+"PO-Revision-Date: 2005-09-08 23:20+0800\n"
+"Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -451,7 +451,7 @@ msgstr "透明度"
 
 #: ../settings/iconbox_plugin.c:777
 msgid "Full"
-msgstr ""
+msgstr "全"
 
 #: ../settings/iconbox_plugin.c:831 ../settings/iconbox_plugin.c:841
 #: ../settings/iconbox_plugin.c:992
@@ -677,19 +677,16 @@ msgstr "鎖住螢幕"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:172
-#, fuzzy
 msgid "tip|Exit"
 msgstr "退出"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:174
-#, fuzzy
 msgid "tip|Setup"
 msgstr "設定"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:176
-#, fuzzy
 msgid "tip|Info"
 msgstr "資訊"
 
@@ -808,124 +805,3 @@ msgstr "Nautilus檔案管理器"
 msgid "Printer Management"
 msgstr "列印管理"
 
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "移除一個項目將同時移除其附屬的彈出選單。"
-
-#~ msgid "Caption:"
-#~ msgstr "標題："
-
-#~ msgid "Tooltip:"
-#~ msgstr "工具提示："
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "將選單附加到啟動器"
-
-#~ msgid "Change menu item"
-#~ msgstr "改變選單項目"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "點選滑鼠右鍵以改變項目"
-
-#~ msgid "Add launcher"
-#~ msgstr "增加啟動器"
-
-#~ msgid "Add new item"
-#~ msgstr "增加新項目"
-
-#~ msgid "Left"
-#~ msgstr "左側"
-
-#~ msgid "Right"
-#~ msgstr "右側"
-
-#~ msgid "Top"
-#~ msgstr "頂部"
-
-#~ msgid "Bottom"
-#~ msgstr "底部"
-
-#~ msgid "Popup position:"
-#~ msgstr "彈出式選單位置："
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "將選單附加到啟動器"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "系統提示區"
-
-#~ msgid "Menu"
-#~ msgstr "選單"
-
-#~ msgid "Always on top:"
-#~ msgstr "總是置頂："
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "在工作列中顯示系統匣(_S)"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "無法取得初始樣式"
-
-#~ msgid "This should not happen"
-#~ msgstr "這不應該發生"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "無法取得預設螢幕\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "無法連接到工作階段管理程式"
-
-#~ msgid "Remove"
-#~ msgstr "移除"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "顯示兩個按鈕："
-
-#~ msgid "Change item"
-#~ msgstr "改變項目"
-
-#~ msgid "Menu:"
-#~ msgstr "選單："
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce 啟動面板"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/增加新項目(_N)"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/屬性(_P)..."
-
-#~ msgid "Select icon"
-#~ msgstr "選擇圖示"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "你的視窗管理程式似乎不支援 http://www.freedesktop.org 所定義的視窗管理程式"
-#~ "提示。\n"
-#~ "某些 Xfce 的功能可能無法正常運行。"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/設定管理程式(_S)"
-
-#~ msgid "Tiny"
-#~ msgstr "極小"
-
-#~ msgid "Icon theme:"
-#~ msgstr "圖示主題："
-
-#~ msgid "Panel layer:"
-#~ msgstr "面板所在圖層："
-
-#~ msgid "Normal"
-#~ msgstr "正常"
-
-#~ msgid "Center the panel:"
-#~ msgstr "面板居中："
-
-#~ msgid "Set"
-#~ msgstr "設定"
