Updated EL language files for 4.2 branch (2/2)
(Old svn revision: 17509)

--- a/po/el.po
+++ b/po/el.po
@@ -1,17 +1,16 @@
-# translation of el_GR.po to Ελληνικά
-# translation of xfce4-panel.po to Ελληνικά
+# Greek translation of xfce4-panel
 # This file is distributed under the same license as the xfce4-panel package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Stavros Giannouris <StavrosG2002@freemail.gr>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: el_GR\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: xfce4-panel 4.2\n"
+"Report-Msgid-Bugs-To: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-04-07 17:41+0200\n"
+"PO-Revision-Date: 2005-09-09 18:01+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
-"Language-Team: Ελληνικά\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
