--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,13 @@
 NEWS for xfce4-panel
 ====================
 
+4.2.3
+=====
+- Updated translations (Jean-François, Daichi)
+- Fix crash in settings dialog when settings could not be saved (Benedikt)
+- Remove button insensitivity after click, because it doesn't play well with
+  newer versions of gtk (Jasper)
+
 4.2.2
 =======
 - Updated translations (Jean-François).
