Added Polish translations by by Piotr Malinski.
Updated Polish translations by Piotr Malinski.

Added fall back address at the 'Language-Team: ', according to the
    http://www.iro.umontreal.ca/translation/registry.cgi?team=index

Bumped version at the 'Project-Id-Version: ' for the next release.

Modified initial comment strings.


(Old svn revision: 17709)

--- a/po/pl.po
+++ b/po/pl.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Paweł Pastuła <pastulap@poczta.onet.pl>, 2003.
 # Daniel Mróz <beorn@alpha.pl>, 2003.
-# Wit Wiliński <madman@berlios.de>, 2005.
+# Wit Wiliński <madman@linux.bydgo.org>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.2.2\n"
+"Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-08-20 01:30+0900\n"
+"PO-Revision-Date: 2005-09-21 09:44+0900\n"
 "Last-Translator: Wit Wilinski <madman@linux.bydgo.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
