--- a/po/pl.po
+++ b/po/pl.po
@@ -4,14 +4,15 @@
 # Paweł Pastuła <pastulap@poczta.onet.pl>, 2003.
 # Daniel Mróz <beorn@alpha.pl>, 2003.
 # Wit Wiliński <madman@linux.bydgo.org>, 2005.
+# Piotr Maliński <admin@rk.edu.pl>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-27 13:12+0900\n"
-"PO-Revision-Date: 2005-09-21 09:44+0900\n"
-"Last-Translator: Wit Wilinski <madman@linux.bydgo.org>\n"
+"POT-Creation-Date: 2005-09-28 12:49+0900\n"
+"PO-Revision-Date: 2005-09-28 12:54+0900\n"
+"Last-Translator: Piotr Maliński <admin@rk.edu.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -172,7 +173,7 @@ msgstr "Zab_lokuj ekran"
 
 #: ../panel/panel.c:671
 msgid "_Restart"
-msgstr ""
+msgstr "_Restart"
 
 #: ../panel/panel.c:680
 msgid "E_xit"
@@ -228,7 +229,7 @@ msgstr "Dźwięk"
 
 #: ../panel/icons.c:75
 msgid "Terminal"
-msgstr ""
+msgstr "Terminal"
 
 #: ../panel/mcs_client.c:170
 msgid "Settings manager not available"
@@ -236,7 +237,7 @@ msgstr "Menadżer ustawień niedostępny"
 
 #: ../panel/popup.c:267
 msgid "Menu"
-msgstr ""
+msgstr "Menu"
 
 #: ../settings/xfce_settings_dialog.c:87
 msgid "Small"
@@ -336,7 +337,7 @@ msgstr "Cyfrowy"
 
 #: ../plugins/clock/clock.c:443
 msgid "LED"
-msgstr ""
+msgstr "LED"
 
 #: ../plugins/clock/clock.c:505
 msgid "Hour mode:"
